change King James Version + Apocrypha to HOLY BIBLE; also add proper editor's note

--- a/final product/OEBPS/copyright.xhtml
+++ b/final product/OEBPS/copyright.xhtml
@@ -4,19 +4,24 @@
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="epub.css" type="text/css" />
 <meta name="viewport" content="user-scalable=yes, initial-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
-<title>King James Version + Apocrypha  </title>
+<title>HOLY BIBLE  </title>
 </head>
 <body dir='ltr'>
 <ul class='tnav'>
 <li><a href='index.xhtml'>^</a></li>
 </ul>
 <div class='main' id='RV0_0'>
-<img class='bibcover' src='cover.png' height='400' width='260' style='padding: 0 15px 15px 0; float:left' /><h1 class='gentium'>King James Version + Apocrypha</h1>
-<h2>The King James Version or Authorized Version of the Holy Bible, using the standardized text of 1769, with Apocrypha/Deuterocanon</h2>
-<p><a href='http://en.wikipedia.org/wiki/Public_domain'>Public Domain</a><br />
-Language: <a href='http://www.ethnologue.org/language/eng' class='gentium' target='_blank'>English</a><br />
-Dialect: archaic British<br />
-<br />
-Letters patent issued by King James with no expiration date means that to print this translation in the United Kingdom or import printed copies into the UK, you need permission. Currently, the Cambridge University Press, the Oxford University Press, and Collins have the exclusive right to print this Bible translation in the UK. This royal decree has no effect outside of the UK, where this work is firmly in the Public Domain. Please see http://www.cambridge.org/about-us/who-we-are/queens-printers-patent and https://en.wikipedia.org/wiki/King_James_Version#Copyright_status for more information.</p>
+<h2>Editor’s Note</h2>
+<br/>
+<p>
+This is the King James Version or Authorized Version of the Holy Bible, using the standardized text of 1769. The footnotes for the Old and New Testaments have been taken from <i>The Parallel Bible</i>, published by Oxford University Press in 1885. The footnotes for the Apocrypha have been taken from the <i>Cambridge Paragraph Bible of the Authorized English Edition</i>, by the Rev. F. H. Scrivener.<br/>
+<br/>
+I retain all copyrights.
+<br/>
+<br/>
+Michael Archer
+<br/>
+michael.archers.email@gmail.com
+</p>
 <br/>
 </div></body></html>
