--- a/final product/OEBPS/1ES.xhtml
+++ b/final product/OEBPS/1ES.xhtml
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="epub.css" type="text/css" />
 <meta name="viewport" content="user-scalable=yes, initial-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
-<title>King James Version + Apocrypha 1 Esdras 1</title>
+<title>HOLY BIBLE 1 Esdras 1</title>
 </head>
 <body dir='ltr'>
 <ul class='tnav'>
