--- a/final product/OEBPS/cover.xhtml
+++ b/final product/OEBPS/cover.xhtml
@@ -9,6 +9,6 @@ img {max-width:100%;max-height:100%}
 </style>
 </head>
 <body>
- <img src="cover.png" alt="King James Version + Apocrypha" />
+ <img src="cover.png" alt="HOLY BIBLE" />
 </body>
 </html>
