--- a/final product/OEBPS/index.xhtml
+++ b/final product/OEBPS/index.xhtml
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
  <meta charset="utf-8" />
- <title>King James Version + Apocrypha</title>
+ <title>HOLY BIBLE</title>
  <link href='epub.css' rel='stylesheet' />
 </head>
 <body dir='ltr' class='toc'>
  <nav epub:type="toc" id="toc">
-  <h1 class="title">King James Version + Apocrypha</h1>
+  <h1 class="title">HOLY BIBLE</h1>
   <ol class='nav'>
-   <li><a class='xx' href='copyright.xhtml'>Public Domain</a></li>
+   <li><a class='xx' href='copyright.xhtml'>Editor’s Note</a></li>
    <li><a class='xx' href='FRT.xhtml'>Preface</a>
    </li>
    <li><a class='oo' href='GEN.xhtml'>Genesis</a>
@@ -106,7 +106,7 @@
    </li>
    <li><a class='aa' href='BAR.xhtml'>Baruch</a>
    </li>
-   <li><a class='aa' href='S3Y.xhtml'>3 Holy Children's Song</a>
+   <li><a class='aa' href='S3Y.xhtml'>3 Holy Children’s Song</a>
    </li>
    <li><a class='aa' href='SUS.xhtml'>Susanna</a>
    </li>
@@ -179,7 +179,7 @@
  <ol>
   <li><a epub:type='cover' href='cover.xhtml'>cover</a></li>
   <li><a epub:type='frontmatter' href='copyright.xhtml'>©?</a></li>
-  <li><a epub:type='toc' href='#toc'>King James Version + Apocrypha</a></li>
+  <li><a epub:type='toc' href='#toc'>HOLY BIBLE</a></li>
   <li><a epub:type='preface' href='FRT.xhtml'>Preface</a></li>
   <li><a epub:type='bodymatter' href='GEN.xhtml'>Genesis</a></li>
  </ol>
