fix a few discrepancies

--- a/final product/OEBPS/JDT.xhtml
+++ b/final product/OEBPS/JDT.xhtml
@@ -79,7 +79,7 @@
 <div class='p'>
 <span class="verse" id="JT2_6">6&#160;</span>And thou shalt go against all the west country, because <a href='#FN44'  epub:type='noteref' class='noteref'>d</a>they disobeyed my commandment. </div>
 <div class='p'>
-<span class="verse" id="JT2_7">7&#160;</span>And thou shalt declare unto them, that they prepare for me <a href='#FN45'  epub:type='noteref' class='noteref'>*</a>earth and water: for I will go forth in my wrath against them and will cover the whole face of the earth with the feet of mine army, and I will give them for a spoil unto them: </div>
+<span class="verse" id="JT2_7">7&#160;</span>And thou shalt declare unto them that they prepare for me <a href='#FN45'  epub:type='noteref' class='noteref'>*</a>earth and water: for I will go forth in my wrath against them and will cover the whole face of the earth with the feet of mine army, and I will give them for a spoil unto them: </div>
 <div class='p'>
 <span class="verse" id="JT2_8">8&#160;</span>So that their slain shall fill their valleys and brooks and the river shall be filled with their dead, till it overflow: </div>
 <div class='p'>
@@ -572,7 +572,7 @@
 <div class='p'>
 <span class="verse" id="JT13_1">1&#160;</span>Now when the evening was come, <a href='#FN367'  epub:type='noteref' class='noteref'>a</a>his servants made haste to <a href='#FN368'  epub:type='noteref' class='noteref'>b</a>depart, and Bagoas shut his tent without, and dismissed <a href='#FN369'  epub:type='noteref' class='noteref'>c</a>the waiters from the presence of his lord; and they went to their beds: for they were all weary, because the feast had been long. </div>
 <div class='p'>
-<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying alone upon his bed: for <a href='#FN370'  epub:type='noteref' class='noteref'>d</a>he was filled with wine. </div>
+<span class="verse" id="JT13_2">2&#160;</span>And Judith was left alone in the tent, and Holofernes lying along upon his bed: for <a href='#FN370'  epub:type='noteref' class='noteref'>d</a>he was filled with wine. </div>
 <div class='p'>
 <span class="verse" id="JT13_3">3&#160;</span>Now Judith had commanded her maid to stand without her bedchamber, and to wait for her. coming forth, as she did daily: for she said she would go forth to her prayers, and she spake to Bagoas according to the same purpose. </div>
 <div class='p'>
