--- a/final product/OEBPS/WIS.xhtml
+++ b/final product/OEBPS/WIS.xhtml
@@ -705,7 +705,7 @@
 <div class='p'>
 <span class="verse" id="WS15_7">7&#160;</span>For <a href='#FN497'  epub:type='noteref' class='noteref'>c</a>the potter, tempering soft earth, fashioneth every vessel with much labour for our service: yea, <a href='#FN498'  epub:type='noteref' class='noteref'>c</a>of the same clay he maketh both the vessels that serve for clean uses, and likewise also all such as serve to the contrary: but what is the use of either sort, the potter himself is the judge. </div>
 <div class='p'>
-<span class="verse" id="WS15_8">8&#160;</span>And employing his labours lewdly, he maketh a vain god of the same clay, even he which a little before was made of earth himself, and within a little while after returneth to the same, <a href='#FN499'  epub:type='noteref' class='noteref'>d</a>out of which he was taken, <a href='#FN500'  epub:type='noteref' class='noteref'>e</a>when his life which was lent him shall be demanded. </div>
+<span class="verse" id="WS15_8">8&#160;</span>And employing his labours lewdly, he maketh a vain god of the same clay, even he which a little before was made of earth himself, and within a little while after returneth to the same, <a href='#FN499'  epub:type='noteref' class='noteref'>d</a>out of the which he was taken, <a href='#FN500'  epub:type='noteref' class='noteref'>e</a>when his life which was lent him shall be demanded. </div>
 <div class='p'>
 <span class="verse" id="WS15_9">9&#160;</span>Notwithstanding his care is, not that he shall <a href='#FN501'  epub:type='noteref' class='noteref'>*</a>have much labour, nor that his life is short: but striveth to excel goldsmiths and silversmiths, and endeavoureth to do like the workers in brass, and counteth it his glory to make counterfeit things. </div>
 <div class='p'>
