add an Editor's Changes page

--- a/final product/OEBPS/index.xhtml
+++ b/final product/OEBPS/index.xhtml
@@ -9,7 +9,10 @@
  <nav epub:type="toc" id="toc">
   <h1 class="title">HOLY BIBLE</h1>
   <ol class='nav'>
-   <li><a class='xx' href='copyright.xhtml'>Editor’s Note</a></li>
+   <li><a class='xx' href='copyright.xhtml'>Editor’s Note</a>
+   </li>
+   <li><a class='xx' href='changes.xhtml'>Editor’s Changes</a>
+   </li>
    <li><a class='xx' href='FRT.xhtml'>Preface</a>
    </li>
    <li><a class='oo' href='GEN.xhtml'>Genesis</a>
